Add auth on backend
